--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/pages/**/*.{js,jsx,ts,tsx}",
+      "src": "next.config.js",
       "use": "@vercel/next"
     }
   ],
- 
   "rewrites": [
     {
       "source": "/api/:path*",
