--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "latest",
     "autoprefixer": "latest",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "next": "latest",
     "next-auth": "latest",
