--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "postinstall": "prisma generate" 
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "latest",
-    "autoprefixer": "latest",
+    "@prisma/client": "5.2.0",
+    "autoprefixer": "10.4.7",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
-    "next": "latest",
-    "next-auth": "latest",
-    "postcss": "latest",
-    "prisma": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "latest",
+    "jsonwebtoken": "^9.0.2",
+    "next": "13.4.7",
+    "next-auth": "4.22.1",
+    "postcss": "8.4.14",
+    "prisma": "5.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.2.7",
     "todo-app": "file:"
   },
   "devDependencies": {
-    "@types/jest": "latest",
+    "@types/jest": "29.5.2",
     "@types/react": "19.0.2",
-    "jest": "latest",
-    "ts-jest": "latest",
-    "typescript": "latest"
+    "jest": "29.5.0",
+    "ts-jest": "29.1.0",
+    "typescript": "5.1.6"
   }
 }
