--- a/package.json
+++ b/package.json
@@ -11,25 +11,23 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "5.2.0",
-    "autoprefixer": "10.4.7",
+    "@prisma/client": "^6.1.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.7",
-    "next-auth": "4.22.1",
-    "postcss": "8.4.14",
-    "prisma": "5.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.2.7",
+    "next": "^15.1.3",
+    "next-auth": "^4.24.11",
+    "postcss": "^8.4.49",
+    "prisma": "^6.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17",
     "todo-app": "file:"
   },
   "devDependencies": {
-    "@types/jest": "29.5.2",
-    "@types/react": "19.0.2",
-    "jest": "29.5.0",
-    "ts-jest": "29.1.0",
-    "typescript": "5.1.6"
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.2",
+    "jest": "^29.7.0"
   }
 }
