--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "postcss": "^8.4.49",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "todo-app": "file:"
   },
