--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "jest",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.1.0",
