--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
+    "start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next start",
+    "analyze": "cross-env ANALYZE=true npm run build",
     "test": "jest",
     "postinstall": "prisma generate"
   },
@@ -14,13 +15,16 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/bundle-analyzer": "^15.1.3",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-icons": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "babel-loader": "^9.2.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "jsonwebtoken": "^9.0.2",
