--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^15.1.3",
     "@prisma/client": "^6.1.0",
