--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "todo-app",
+ "name": "todo-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev --turbopack",
     "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
     "start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next start",
     "analyze": "cross-env ANALYZE=true npm run build",
