--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
  "name": "todo-app",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev --turbopack",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
-    "start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next start",
-    "analyze": "cross-env ANALYZE=true npm run build",
-    "test": "jest",
-    "postinstall": "prisma generate"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^15.1.3",
-    "@prisma/client": "^6.1.0",
-    "@radix-ui/react-icons": "^1.3.2",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.9",
-    "babel-loader": "^9.2.1",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.7",
-    "framer-motion": "^11.15.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.469.0",
-    "next": "^15.1.3",
-    "next-auth": "^4.24.11",
-    "postcss": "^8.4.49",
-    "prisma": "^6.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "todo-app": "file:"
-  },
-  "devDependencies": {
-    "@shadcn/ui": "^0.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.2",
-    "jest": "^29.7.0"
-  }
+ "version": "1.0.0",
+ "private": true,
+ "scripts": {
+  "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev --turbopack",
+  "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
+  "start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next start",
+  "analyze": "cross-env ANALYZE=true npm run build",
+  "test": "jest",
+  "postinstall": "prisma generate"
+ },
+ "prisma": {
+  "seed": "node prisma/seed.js"
+ },
+ "dependencies": {
+  "@babel/plugin-transform-react-jsx": "^7.25.9",
+  "@next-auth/prisma-adapter": "^1.0.7",
+  "@next/bundle-analyzer": "^15.1.3",
+  "@prisma/client": "^6.1.0",
+  "@radix-ui/react-dialog": "^1.1.4",
+  "@radix-ui/react-icons": "^1.3.2",
+  "autoprefixer": "^10.4.20",
+  "axios": "^1.7.9",
+  "babel-loader": "^9.2.1",
+  "bcryptjs": "^2.4.3",
+  "class-variance-authority": "^0.7.1",
+  "cloudinary": "^2.5.1",
+  "clsx": "^2.1.1",
+  "cross-env": "^7.0.3",
+  "dotenv": "^16.4.7",
+  "formidable": "^3.5.2",
+  "framer-motion": "^11.15.0",
+  "fs": "^0.0.1-security",
+  "jsonwebtoken": "^9.0.2",
+  "lucide-react": "^0.469.0",
+  "next": "^15.1.3",
+  "next-auth": "^4.24.11",
+  "path": "^0.12.7",
+  "postcss": "^8.4.49",
+  "prisma": "^6.1.0",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
+  "react-hot-toast": "^2.4.1",
+  "react-icons": "^5.4.0",
+  "tailwind-merge": "^2.6.0",
+  "tailwindcss": "^3.4.17",
+  "todo-app": "file:"
+ },
+ "devDependencies": {
+  "@shadcn/ui": "^0.0.4",
+  "@types/jest": "^29.5.14",
+  "@types/react": "^19.0.2",
+  "jest": "^29.7.0"
+ }
 }
