--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "lucide-react": "^0.469.0",
   "next": "^15.1.3",
   "next-auth": "^4.24.11",
+  "nodemailer": "^6.9.16",
   "path": "^0.12.7",
   "postcss": "^8.4.49",
   "prisma": "^6.1.0",
