--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
  "name": "todo-app",
  "version": "1.0.0",
  "private": true,
+ "type": "module",
  "scripts": {
   "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev --turbopack",
-  "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
+  "build": "prisma generate && cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
   "start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next start",
   "analyze": "cross-env ANALYZE=true npm run build",
   "test": "jest",
-  "postinstall": "prisma generate"
+  "postinstall": "prisma generate",
+  "prisma:migrate:dev": "prisma migrate dev",
+  "prisma:migrate:prod": "prisma migrate deploy",
+  "prisma:studio": "prisma studio"
  },
  "prisma": {
   "seed": "node prisma/seed.js"
@@ -18,6 +22,7 @@
   "@next-auth/prisma-adapter": "^1.0.7",
   "@next/bundle-analyzer": "^15.1.3",
   "@prisma/client": "^6.1.0",
+  "@prisma/extension-accelerate": "^1.2.1",
   "@radix-ui/react-dialog": "^1.1.4",
   "@radix-ui/react-icons": "^1.3.2",
   "autoprefixer": "^10.4.20",
