Resolved config issues

--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
  "private": true,
  "type": "module",
  "scripts": {
-  "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev --turbopack",
-  "build": "prisma generate --no-engine && cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
-  "start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next start",
-  "analyze": "cross-env ANALYZE=true npm run build",
-  "test": "jest",
-  "postinstall": "prisma generate --no-engine",
-  "prisma:migrate:dev": "prisma migrate dev",
-  "prisma:migrate:prod": "prisma migrate deploy",
-  "prisma:studio": "prisma studio"
- },
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "build": "prisma generate --no-engine && next build",
+  "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "clean": "rimraf .next",
+    "type-check": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true npm run build",
+    "test": "jest",
+    "seed": "node prisma/seed.js",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:studio": "prisma studio"
+   },
  "prisma": {
   "seed": "node prisma/seed.js"
  },
