--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "source": "/api/:path*",
       "destination": "/api/:path*"
+    },
+    {
+      "source": "/account/settings",
+      "destination": "/account/settings"
     }
   ],
   "redirects": [
